Week 2/Challenges/force-app/main/default/objects/Class__c/fields/AssignedTeacher__c.field-meta.xml
<CustomField>
    <fullName>AssignedTeacher__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned Teacher</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>User must be a teacher.</errorMessage>
        <filterItems>
            <field>User.Profile.Name</field>
            <operation>equals</operation>
            <value>Teacher</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Classes</relationshipName>
    <type>Lookup</type>
</CustomField>