Week 2/Challenges/force-app/main/default/objects/Class__c/fields/StudentsEnrolled__c.field-meta.xml
<CustomField>
    <fullName>StudentsEnrolled__c</fullName>
    <label>Students Enrolled</label>
    <summaryFilterItems>
        <field>ClassRoster__c.Status__c</field>
        <operation>equals</operation>
        <value>Enrolled</value>
    </summaryFilterItems>
    <summaryForeignKey>ClassRoster__c.Class__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>