Week 2/Challenges/force-app/main/default/objects/Class__c/recordTypes/History.recordType-meta.xml
<RecordType>
    <fullName>History</fullName>
    <active>true</active>
    <label>History</label>
</RecordType>