Week 2/Challenges/force-app/main/default/objects/Class__c/recordTypes/Math.recordType-meta.xml
<RecordType>
    <fullName>Math</fullName>
    <active>true</active>
    <label>Math</label>
</RecordType>