Week 2/Challenges/force-app/main/default/objects/Class__c/listViews/History_Classes.listView-meta.xml
<ListView>
    <fullName>History_Classes</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Class__c.History</value>
    </filters>
    <label>History Classes</label>
</ListView>