Week 2/Challenges/force-app/main/default/objects/Class__c/listViews/Math_Classes.listView-meta.xml
<ListView>
    <fullName>Math_Classes</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Class__c.Math</value>
    </filters>
    <label>Math Classes</label>
</ListView>