Week 2/Challenges/force-app/main/default/objects/Class__c/listViews/Science_Classes.listView-meta.xml
<ListView>
    <fullName>Science_Classes</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Class__c.Science</value>
    </filters>
    <label>Science Classes</label>
</ListView>